@@ -1,0 +1,276 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "\u91dc\u5c71\u570b\u969b\u96fb\u5f71\u7bc0\u89c0\u773e\u4eba\u6578\u7834\u7d00\u9304\uff01145,000\u540d\u5f71\u8ff7\u9f4a\u805a\u4e00\u5802\uff0c\u8ab0\u662f\u4eca\u5e74\u7684\u6700\u5927\u8d0f\u5bb6\uff1f", "description": "\u91dc\u5c71\u570b\u969b\u96fb\u5f71\u7bc0\u89c0\u773e\u4eba\u6578\u7834\u7d00\u9304\uff01145,000\u540d\u5f71\u8ff7\u9f4a\u805a\u4e00\u5802\uff0c\u8ab0\u662f\u4eca\u5e74\u7684\u6700\u5927\u8d0f\u5bb6\uff1f", "url": "https://www.famechos.me/news/\u91dc\u5c71\u570b\u969b\u96fb\u5f71\u7bc0\u89c0\u773e\u4eba\u6578\u7834\u7d00\u9304\uff01145,000\u540d\u5f71\u8ff7\u9f4a\u805a\u4e00\u5802\uff0c\u8ab0\u662f\u4eca\u5e74\u7684\u6700\u5927\u8d0f\u5bb6\uff1f.html", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-13T13:27:49.646049+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/釜山國際電影節觀眾人數破紀錄！145,000名影迷齊聚一堂，誰是今年的最大贏家？.html"/>
+<meta name="description" content="釜山國際電影節再創佳績！今年的電影節吸引了145,000名影迷參與，打破了往年的紀錄。誰能夠成為今年的最大贏家？一起來關注釜山國際電影節的最新消息！">
+
+<meta name="keywords" content="釜山國際電影節，電影節，觀眾人數，紀錄，影迷，最大贏家，電影獎項，韓國電影，國際電影">
+
+	<link rel="stylesheet" href="../main-nav.css">
+	<link rel="stylesheet" href="../main-content.css">
+	<link rel="stylesheet" href="../main-small.css">
+	<link rel="stylesheet" href="../post.css">
+	<link rel="stylesheet" href="../main-footer.css">
+	<link rel="stylesheet" href="../news.css">
+ 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> 
+	<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/釜山國際電影節觀眾人數破紀錄！145,000名影迷齊聚一堂，誰是今年的最大贏家？.html" />
+        <meta property="og:title" content="釜山國際電影節觀眾人數破紀錄！145,000名影迷齊聚一堂，誰是今年的最大贏家？" />
+        <meta property="og:description" content="釜山國際電影節觀眾人數破紀錄！145,000名影迷齊聚一堂，誰是今年的最大贏家？" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="釜山國際電影節觀眾人數破紀錄！145,000名影迷齊聚一堂，誰是今年的最大贏家？" />
+        <meta property="twitter:description" content="釜山國際電影節觀眾人數破紀錄！145,000名影迷齊聚一堂，誰是今年的最大贏家？" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+	<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+	<meta property="og:type" content="article" />
+	<meta name="robots" content="index, follow" />
+	<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+	<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <a href="https://www.famechos.me/"><img class="famechos-logo" src="../img/famechos_logo.png"></a>
+          
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type"><a href="https://www.famechos.me/k-pop.html">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2 class="nav-type-text">K-POP</h2>
+        </button></a>
+  
+        </div>
+        <div class="nav-type-2 nav-type"><a href="https://www.famechos.me/j-pop.html">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2 class="nav-type-text">J-POP</h2>
+        </button></a>
+  
+        </div>
+        <div class="nav-type-3 nav-type"><a href="https://www.famechos.me/drama.html">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2 class="nav-type-text">影視</h2>
+        </button></a>
+          
+        </div>
+        <div class="nav-type-4 nav-type"><a href="https://www.famechos.me/others.html">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2 class="nav-type-text">其他</h2>
+        </button></a>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer"><a href="https://www.famechos.me/about_us.html">
+          <button class="feedback-btn nav-type-btn">
+            <h2 class="nav-type-text">關於我們</h2>
+          </button></a>
+        </div>
+        <div class="nav-setting"><a href="https://www.famechos.me/privacy_policy.html">
+          <button class="setting-btn nav-type-btn">
+            <h2 class="nav-type-text">私隱條款</h2>
+          </button></a>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type"><a href="https://www.famechos.me/k-pop.html">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-2 nav-type list-type"><a href="https://www.famechos.me/j-pop.html">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-3 nav-type list-type"><a href="https://www.famechos.me/drama.html">
+          <button class="list-type-btn">
+          <p>影視</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-4 nav-type list-type"><a href="https://www.famechos.me/others.html">
+          <button class="list-type-btn">
+          <p>其他</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-5 nav-type list-type"><a href="https://www.famechos.me/about_us.html">
+          <button class="list-type-btn">
+          <p>關於我們</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-6 nav-type list-type"><a href="https://www.famechos.me/privacy_policy.html">
+          <button class="list-type-btn">
+          <p>私隱條款</p>
+          </button></a>
+
+        </div>  
+
+      </div>
+      
+    </div>
+  </nav>
+
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>釜山國際電影節觀眾人數破紀錄！145,000名影迷齊聚一堂，誰是今年的最大贏家？</h1>
+	</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">K-Pop</p>
+          <p class="news-date">13/10/2024</p>
+        </div>
+	<p>釜山國際電影節（BIFF）在10天的放映後於今日落幕，創下觀眾人數新紀錄。今年的電影節共吸引了超過145,000名觀眾前往釜山觀賞電影。</p>
+<p>電影節共放映了來自63個國家的224部電影。主辦委員會表示，儘管面臨著國家預算削減等挑戰，但電影節仍然取得了史上最高的座位佔有率。</p>
+<p>電影節的共同副主任朴道信（Park Do-sin）表示：「我們取得了最高的座位佔有率，同時也感謝觀眾的支持。」他還就網上售票系統的問題表示歉意，並表示委員會將會改善預訂系統。</p>
+<p>電影節與觀眾的互動非常熱絡，包括日本導演黑澤清（Kiyoshi Kurosawa）和葡萄牙導演米格爾·戈麥斯（Miguel Gomes）與當地電影愛好者進行的互動。</p>
+<p>以下是電影節的得獎名單：</p>
+<ul>
+<li>新浪潮獎（New Currents Award）：朴利雄（Park Ri-woong）的《The Land of Morning Calm》和The Maw Naing的《MA - Cry of Silence》</li>
+<li>金智奭獎（Kim Jiseok Award）：麗瑪·達斯（Rima Das）的《Village Rockstars 2》和林書宇（Tom Lin Shu-Yu）的《Yen and Ai-LEE》</li>
+<li>最佳紀錄片獎（BIFF Mecenat Award）：導演冼澔楊（Frankie Sin）的《 Home》和朴敏秀（Park Min-soo）和安基亨（Ahn Kearn-hyung）的《Work and Days》</li>
+<li>善才獎（Sonje Award）：宋智瑞（Song Ji-seo）的《Yurim》和埃萊諾雷·馬哈茂迪安（Eleonore Mahmoudian）和松井浩史（Matsui Hiroshi）的《A Garden in Winter》</li>
+</ul>
+<p>電影節將以新加坡導演邱金海（Eric Khoo）的最新作品《Spirit World》作為閉幕影片。明年的電影節將於9月17日開幕，放映10天。</p>
+<h2>Jessi的粉絲遭受攻擊事件</h2>
+<p>韓國女歌手Jessi的粉絲在要求合照後遭遇攻擊。這起事件引起了廣泛關注，許多人對此表示震驚和憤怒。</p>
+<h2>朝鮮領導人胞妹發出威脅：再有韓國無人機入侵將釀成災難</h2>
+<p>朝鮮領導人胞妹發出警告，如果再發現韓國無人機，將引發災難。這一聲明引起了國際社會的關注，許多人擔心朝鮮可能採取進一步的行動。</p>
+<h2>韓國再遭朝鮮發射20個垃圾氣球</h2>
+<p>朝鮮再次向韓國發射20個垃圾氣球，韓國參謀首長聯席會議（JCS）透露。這一事件引起了韓國政府的關注，許多人擔心朝鮮可能採取進一步的行動。</p>
+<h2>韓國無人機飛越平壤，朝鮮媒體稱</h2>
+<p>朝鮮媒體報導，韓國無人機飛越平壤。這一事件引起了國際社會的關注，許多人擔心朝鮮可能採取進一步的行動。</p>
+<h2>預計2024年底召開韓美日峰會</h2>
+<p>韓國國家安全顧問表示，韓美日峰會預計在2024年底舉行。這一峰會將是三國領導人之間的重要會議，許多人期待著峰會的成果。</p>
+
+<p>資料來源：Yonhap News Agency</p>
+</div><div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<p class="related-vid-text">相關影片：</p>
+</div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/tFxVzbzRRhg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<p class="news-text-inner">資料來源： YouTube</p>
+</div>
+
+
+ <div class ="related-news-outer title-bar">
+        <p class="related-news-text">相關新聞：</p>
+      </div>
+      
+      <div class ="related-news-box">
+        
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/韓國文壇歷史性一刻！首位韓國人韓江奪諾貝爾文學獎：這份榮耀不只屬於我.html">韓國文壇歷史性一刻！首位韓國人韓江奪諾貝爾文學獎：這份榮耀不只屬於我</a>
+        </p>
+                
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/韓國文壇新星！首位諾貝爾文學獎得主韓江：寫下韓國現代史的傷痛與溫暖.html">韓國文壇新星！首位諾貝爾文學獎得主韓江：寫下韓國現代史的傷痛與溫暖</a>
+        </p>
+                
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/韓國小說家韓江獲諾貝爾文學獎：父親驚訝得「好像世界被顛倒了」.html">韓國小說家韓江獲諾貝爾文學獎：父親驚訝得「好像世界被顛倒了」</a>
+        </p>
+                
+      </div>
+
+    </div>
+
+    </main>
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <a href="https://www.famechos.me/"><img class="famechos-logo-footer" src="../img/famechos_logo.png"></a>
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <a href="https://www.famechos.me/k-pop.html"><p class="footer-text">K-POP</p></a>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <a href="https://www.famechos.me/j-pop.html"><p class="footer-text">J-POP</p></a>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <a href="https://www.famechos.me/drama.html"><p class="footer-text">影視</p></a>
+        </div>
+        <div class="other-footer-box footer-box">
+          <a href="https://www.famechos.me/others.html"><p class="footer-text">其他</p></a>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+      
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
