@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Sun, 13 Oct 2024 13:26:02 +0800</lastBuildDate>
+  <lastBuildDate>Sun, 13 Oct 2024 13:28:02 +0800</lastBuildDate>
 
   <item>
   <title>KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單</title>
@@ -201,5 +201,11 @@ YG娛樂旗下的新人女團BABYMONSTER（韓語：베이비몬스터）將於1
   <description>韓江：諾貝爾文學獎得主，探索暴力、美麗和人類韌性的交匯點。。韓國作家韓江是2024年諾貝爾文學獎得主，她以獨特的詩意和實驗性的寫作風格，探索了暴力、死亡等普遍的人類主題。。...</description>
   <category>K-Pop</category>
   <pubDate>Sun, 13 Oct 2024 13:26:02 +0800</pubDate>
+</item><item>
+  <title>釜山國際電影節觀眾人數破紀錄！145,000名影迷齊聚一堂，誰是今年的最大贏家？</title>
+  <link>https://www.famechos.me/news/釜山國際電影節觀眾人數破紀錄！145,000名影迷齊聚一堂，誰是今年的最大贏家？.html</link>
+  <description>釜山國際電影節創下觀眾人數新紀錄。。釜山國際電影節（BIFF）在10天的放映後於今日落幕，創下觀眾人數新紀錄。今年的電影節共吸引了超過145,000名觀眾前往釜山觀賞電影。。...</description>
+  <category>K-Pop</category>
+  <pubDate>Sun, 13 Oct 2024 13:28:02 +0800</pubDate>
 </item></channel>
 </rss>
