@@ -200,4 +200,10 @@
     <ns0:changefreq>weekly</ns0:changefreq>
     <ns0:priority>0.90</ns0:priority>
   </ns0:url>
+<ns0:url>
+    <ns0:loc>https://www.famechos.me/news/釜山國際電影節觀眾人數破紀錄！145,000名影迷齊聚一堂，誰是今年的最大贏家？.html</ns0:loc>
+    <ns0:lastmod>2024-10-13T13:28:02+08:00</ns0:lastmod>
+    <ns0:changefreq>weekly</ns0:changefreq>
+    <ns0:priority>0.90</ns0:priority>
+  </ns0:url>
 </ns0:urlset>
