@@ -29,3 +29,4 @@ https://en.yna.co.kr/view/AEN20241011007100315?section=culture/k-pop&input=rss
 https://en.yna.co.kr/view/AEN20241010012000315?section=culture/k-pop&input=rss
 https://en.yna.co.kr/view/AEN20241010011800315?section=culture/k-pop&input=rss
 https://en.yna.co.kr/view/AEN20241011003051315?section=culture/k-pop&input=rss
+https://en.yna.co.kr/view/AEN20241010010754315?section=culture/k-pop&input=rss
